# ifcComp

./: .gitignore  .gitmodules  CMakeLists.txt  ClusterToVox.cpp  ClusterToVox.h  Reader.cpp  Reader.h  bspline_fitting.cpp  ifcComp.cpp  ifcComp.h
